refactor:deixa o endpoint d etroca de senha com padrão mais RESTFUL
